feat: Add group workspace apps toggle (#1238)
* Add group workspace apps toggle

* wording

* fix pre-commit

---------

Co-authored-by: bbedward <bbedward@gmail.com>

--- a/quickshell/translations/settings_search_index.json
+++ b/quickshell/translations/settings_search_index.json
@@ -709,6 +709,31 @@
     "icon": "visibility_off"
   },
   {
+    "section": "groupWorkspaceApps",
+    "label": "Group Workspace Apps",
+    "tabIndex": 4,
+    "category": "Workspaces",
+    "keywords": [
+      "app",
+      "application",
+      "apps",
+      "collapse",
+      "desktop",
+      "group",
+      "grouped",
+      "icons",
+      "program",
+      "repeated",
+      "same",
+      "spaces",
+      "virtual",
+      "virtual desktops",
+      "workspace",
+      "workspaces"
+    ],
+    "description": "Group repeated application icons in the same workspace"
+  },
+  {
     "section": "workspaceIcons",
     "label": "Named Workspace Icons",
     "tabIndex": 4,
@@ -873,19 +898,25 @@
   },
   {
     "section": "showWorkspaceName",
-    "label": "Workspace Name",
+    "label": "Workspace Names",
     "tabIndex": 4,
     "category": "Workspaces",
     "keywords": [
+      "bars",
       "desktop",
+      "first",
+      "horizontal",
       "labels",
+      "letter",
+      "name",
+      "names",
       "panel",
       "show",
       "spaces",
       "statusbar",
-      "switcher",
       "taskbar",
       "topbar",
+      "vertical",
       "virtual",
       "virtual desktops",
       "workspace",
